log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: jobatabs/log-output
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: true
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /
              port: 5000
      volumes:
        - name: config
          configMap:
            name: log-output-config
            items:
              - key: "information.txt"
                path: "information.txt"
